<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) MiR FeRdOuS
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:id="@+id/logoContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_weight="4"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="40">


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/login_brac_logo"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="25"
            android:gravity="center"
            android:src="@drawable/braclogo_login" />


        <TextView
            android:id="@+id/title"
            android:layout_width="157dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="10"
            android:text="School Monitoring Tool"
            android:textAlignment="center"
            android:textColor="@color/BracSchool" />


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="5"
            android:gravity="center"
            android:src="@drawable/booklogo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextUser"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/Username"
                android:inputType="text"
                android:maxLines="1"
                android:selectAllOnFocus="false"
                android:textAlignment="center"
                android:textColor="@color/BracSchool"
                android:textColorHint="@color/BracSchool" />
            <!-- android:drawableLeft="@drawable/ic_user_24dp"-->

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPass"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:selectAllOnFocus="false"
                android:textAlignment="center"
                android:textColor="@color/BracSchool"
                android:textColorHint="@color/BracSchool" />
            <!--android:drawableLeft="@drawable/ic_lock_outline_24dp"-->
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/chkBoxRemember"
            android:layout_width="267dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/RememberMe"
            android:textColor="@color/BracSchool" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_login"
            android:text="@string/Login"
            android:textColor="@color/btnTxtLogin"
            android:typeface="sans" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".7" />
        <!-- android:drawableRight="@drawable/login_right"-->

    </LinearLayout>
</LinearLayout>